--- a/samples/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm/_Imports.razor
+++ b/samples/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm/_Imports.razor
@@ -9,3 +9,7 @@
 @using KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm
 @using KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm.Shared
 @using KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm.Extensions
+@using System.Text
+@using BlazorWorker.BackgroundServiceFactory
+@using BlazorWorker.WorkerBackgroundService
+@using BlazorWorker.Core
