--- a/samples/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm/Pages/Index.razor
+++ b/samples/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm/Pages/Index.razor
@@ -205,6 +205,7 @@ else
 
     private async Task KeepShowingRegretPlot()
     {
+        _regretPathData = "";
         await Task.Run(async () =>
         {
             while (_showRegretPlot)
